[project]
name = "generative-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffusers>=0.34.0",
    "fastapi[standard]>=0.115.14",
    "openai>=1.93.0",
    "soundfile>=0.13.1",
    "streamlit>=1.46.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.0",
    "uvicorn>=0.35.0",
]
